# mypaper

./: CMakeLists.txt  README.md  package.xml
config_two/: params_a20.yaml  params_a20_720p.yaml  params_a20_lio.yaml  params_b20.yaml  params_b20_lio.yaml  params_c20.yaml  params_c20_lio.yaml  params_d20.yaml  params_d20_lio.yaml  params_font_back_left1.yaml  params_font_back_right1.yaml
data/: .gitignore
include/: test_trajectory.py
include/hough-3d-lines/: hough3dlines.cpp  hough3dlines.h
include/icp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interactive_icp  interactive_icp.cpp  readme.txt  t1.pcd  t2.pcd  初始參數.txt
include/icp/output/: icp_output.pcd
include/pca/: CMakeCache.txt  CMakeLists.txt  Makefile  cheesboard.pcd  cmake_install.cmake  readme.txt  test_pca  test_pca.cpp
launch/: run.launch  run_one.launch
src/: feature_extractor.cpp  feature_extractor_two.cpp  feature_extractor_two_nopca.cpp
